--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rsbuild-plugin-example",
-  "version": "0.0.0",
+  "name": "rsbuild-plugin-unplugin-vue",
+  "version": "0.0.1",
   "repository": "https://github.com/rspack-contrib/rsbuild-plugin-template",
   "license": "MIT",
   "type": "module",
@@ -30,15 +30,15 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@playwright/test": "^1.52.0",
-    "@rsbuild/core": "^1.3.14",
-    "@rslib/core": "^0.6.8",
+    "@rsbuild/core": "^1.3.19",
+    "@rslib/core": "^0.6.9",
     "@types/node": "^22.15.3",
     "playwright": "^1.52.0",
     "simple-git-hooks": "^2.13.0",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
-    "@rsbuild/core": "1.x"
+    "@rsbuild/core": ">= 1.3.19"
   },
   "peerDependenciesMeta": {
     "@rsbuild/core": {
@@ -49,5 +49,8 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
+  },
+  "dependencies": {
+    "unplugin-vue": "^6.2.0"
   }
 }
