--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rslib build",
     "dev": "rslib build --watch",
@@ -35,7 +37,8 @@
     "@types/node": "^22.15.3",
     "playwright": "^1.52.0",
     "simple-git-hooks": "^2.13.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vue": "^3.5.13"
   },
   "peerDependencies": {
     "@rsbuild/core": ">= 1.3.19"
